@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-05-28                                -
+---------------------------------------------
+.: WSM: Task: Update managing items flow (WSM-54)
+
+---------------------------------------------
 - 2020-05-27                                -
 ---------------------------------------------
 .: WSM: Task: Update Shop Settings (WSM-23)
